<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.bre.mits.mitsapp.activities.NewIngredientActivity">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar"
        ></include>

    <TableLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:paddingTop="50dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="88dp"
                android:orientation="vertical"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="8dp">

                <EditText
                    android:id="@+id/newIngName"
                    android:layout_width="368dp"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:ems="10"
                    android:focusable="false"
                    android:longClickable="false"
                    android:text="@string/newIngName"
                    android:textStyle="bold"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="32dp" />

                <EditText
                    android:id="@+id/newIngNameField"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="32dp" />
            </LinearLayout>
        </TableRow>

        <Space
            android:layout_width="1dp"
            android:layout_height="32dp" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="88dp"
                android:orientation="vertical"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="8dp">

                <EditText
                    android:id="@+id/newIngAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:ems="10"
                    android:focusable="false"
                    android:inputType="textPersonName"
                    android:longClickable="false"
                    android:text="@string/newIngAmount"
                    android:textStyle="bold"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="32dp" />

                <EditText
                    android:id="@+id/newIngAmountField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    tools:layout_editor_absoluteX="64dp"
                    tools:layout_editor_absoluteY="261dp" />
            </LinearLayout>
        </TableRow>

        <Space
            android:layout_width="1dp"
            android:layout_height="32dp" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="88dp"
                android:orientation="vertical"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="8dp">

                <EditText
                    android:id="@+id/newIngCritAmount"
                    android:layout_width="368dp"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:ems="10"
                    android:focusable="false"
                    android:longClickable="false"
                    android:text="@string/newIngCritAmount"
                    android:textStyle="bold"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="32dp" />

                <EditText
                    android:id="@+id/newIngCritAmountField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    tools:layout_editor_absoluteX="64dp"
                    tools:layout_editor_absoluteY="261dp" />
            </LinearLayout>
        </TableRow>

        <Space
            android:layout_width="1dp"
            android:layout_height="32dp" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="88dp"
                android:orientation="vertical"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="8dp">

                <EditText
                    android:id="@+id/newIngQuantityUnit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:ems="10"
                    android:focusable="false"
                    android:inputType="textPersonName"
                    android:longClickable="false"
                    android:text="@string/newIngQuantityUnit"
                    android:textStyle="bold"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="32dp" />

                <Spinner
                    android:id="@+id/newIngQuantityUnitSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="0dp" />
            </LinearLayout>
        </TableRow>
    </TableLayout>

</android.support.constraint.ConstraintLayout>